<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Login"
    android:orientation="vertical" >

    <ImageButton
        android:id="@+id/panah"
        android:layout_width="35dp"
        android:layout_height="35dp"
        android:scaleType="fitStart"
        android:textColor="@color/black"
        android:src="@drawable/leftarrow"
        android:background="@color/white"
        android:layout_marginTop="20dp"
        android:layout_marginLeft="20dp"
        android:layout_marginRight="20dp"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintLeft_toLeftOf="parent" />
    <TextView
        android:id="@+id/s1"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/wb"
        android:fontFamily="@font/montserrat_semi_bold"
        android:textSize="15pt"
        android:textColor="@color/black"
        android:layout_marginTop="70dp"
        android:layout_marginBottom="6pt"
        android:layout_marginLeft="20dp"
        android:layout_marginRight="20dp"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toTopOf="parent" />
    <TextView
        android:id="@+id/s2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/cont"
        android:textSize="7pt"
        android:textStyle="bold"
        android:layout_marginLeft="20dp"
        android:layout_marginRight="20dp"
        android:textColor="#5C5757"
        android:fontFamily="@font/montserrat_light"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toBottomOf="@id/s1" />
    <TextView
        android:id="@+id/s3"
        android:labelFor="@id/s4"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/uname"
        android:textSize="10pt"
        android:layout_marginTop="50dp"
        android:layout_marginBottom="5pt"
        android:layout_marginLeft="20dp"
        android:layout_marginRight="20dp"
        android:gravity="left"
        android:textColor="@color/black"
        android:fontFamily="@font/montserrat_semi_bold"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toBottomOf="@id/s2" />
    <EditText
        android:id="@+id/s4"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/usn"
        android:textSize="8pt"
        android:layout_marginBottom="20pt"
        android:layout_marginLeft="20dp"
        android:layout_marginRight="20dp"
        android:textColor="@color/black"
        android:fontFamily="@font/montserrat_light"
        android:inputType="text"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@id/s3"
        />

    <TextView
        android:id="@+id/s5"
        android:labelFor="@id/s6"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/pass"
        android:textSize="10pt"
        android:layout_marginTop="10pt"
        android:layout_marginLeft="20dp"
        android:layout_marginRight="20dp"
        android:textColor="@color/black"
        android:fontFamily="@font/montserrat_semi_bold"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toBottomOf="@id/s4"
        />
    <EditText
        android:id="@+id/s6"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/pw"
        android:textSize="8pt"
        android:layout_marginBottom="10pt"
        android:layout_marginLeft="20dp"
        android:layout_marginRight="20dp"
        android:textColor="@color/black"
        android:fontFamily="@font/montserrat_light"
        android:inputType="textPassword"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@id/s5" />
    <TextView
        android:id="@+id/s7"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/forgot"
        android:textSize="10pt"
        android:gravity="right"
        android:layout_marginTop="10pt"
        android:layout_marginLeft="20dp"
        android:layout_marginRight="20dp"
        android:textColor="@color/black"
        android:fontFamily="@font/montserrat_semi_bold"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@id/s6"/>
    <Button
        android:id="@+id/loginbtn"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="80dp"
        android:layout_marginStart="24dp"
        android:layout_marginEnd="24dp"
        android:layout_marginBottom="200dp"
        android:background="@drawable/button_red"
        android:text="@string/login"
        android:textAllCaps="false"
        android:textSize="10pt"
        android:textColor="@color/white"
        android:fontFamily="@font/montserrat_light"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/s7" />

</androidx.constraintlayout.widget.ConstraintLayout>