<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Welcome"
    android:orientation="vertical" >

    <ImageView
        android:id="@+id/calender"
        android:layout_width="300dp"
        android:layout_height="300dp"
        android:layout_marginTop="40dp"
        android:layout_marginBottom="15dp"
        android:src="@drawable/ic_eventlist"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"/>

    <TextView
        android:id="@+id/welcome"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:fontFamily="@font/montserrat_semi_bold"
        android:gravity="center"
        android:text="@string/welcome"
        android:textColor="#0B175C"
        android:textSize="12pt"
        app:layout_constraintTop_toBottomOf="@id/calender"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"/>

    <TextView
        android:id="@+id/desc"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:fontFamily="@font/montserrat_light"
        android:gravity="center"
        android:text="@string/desc"
        android:textSize="8pt"
        android:layout_marginTop="10dp"
        app:layout_constraintTop_toBottomOf="@id/welcome"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"/>

    <ImageView
        android:id="@+id/bg1"
        android:layout_width="match_parent"
        android:layout_height="260dp"
        android:layout_alignParentBottom="true"
        android:scaleType="fitXY"
        android:src="@drawable/bg_red"
        android:contentDescription="@string/login"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"/>

    <Button
        android:id="@+id/btnGet"
        android:layout_width="300dp"
        android:layout_height="wrap_content"
        android:fontFamily="@font/montserrat_semi_bold"
        android:gravity="center"
        android:text="@string/getstart"
        android:textColor="@color/black"
        android:backgroundTint="@color/white"
        android:layout_marginBottom="30dp"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintBottom_toTopOf="@id/btnLogin"/>

    <TextView
        android:id="@+id/btnLogin"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/login"
        android:textSize="8pt"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        android:gravity="center"
        android:layout_marginBottom="60dp"
        android:textColor="@color/white"
        android:fontFamily="@font/montserrat_semi_bold"/>

</androidx.constraintlayout.widget.ConstraintLayout>